# LionTalk

./: .gitignore  DockerFile  README.md  docker-compose.yml  output.json  package-lock.json  package.json  pyproject.toml  scraper.py
.github/workflows/: docker-image.yml
apps/liontalk/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
apps/liontalk/src/app/: globals.css  layout.tsx  page.tsx
apps/liontalk/src/components/: SeminarCard.tsx
apps/liontalk/src/data/: seminars.json
apps/liontalk/src/types/: index.ts
apps/liontalk/src/utils/: dates.ts
apps/scraper-api/: DockerFile  Dockerfile  README.md  pyproject.toml
apps/scraper-api/src/: input.csv  scrape_method_example.py  scraper.py
apps/web-frontend/liontalk/: Dockerfile.dev  nginx.conf
apps/web-frontend/liontalk/src/data/: seminars.json
